# spe_bank_recon

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt  run_all_tests.py
spe_bank_recon/config/: config.toml  generate_spe_bank_recon_wp_config.toml
spe_bank_recon/core/: __init__.py
spe_bank_recon/core/datasources/: README.md  base.py  csv_source.py  factory.py  google_sheet_source.py  parquet_source.py
spe_bank_recon/core/pipeline/: pipeline.py
spe_bank_recon/core/pipeline/steps/: __init__.py  common_steps.py  step_utils.py
spe_bank_recon/utils/config/: __init__.py
spe_bank_recon/utils/database/: __init__.py  duckdb_manager.py
spe_bank_recon/utils/logging/: logger.py
src/: __init__.py
src/config/: bank_recon_config.toml  bank_recon_entry_monthly.toml  config.toml
src/core/: __init__.py
src/core/datasources/: README.md  __init__.py  base.py  config.py  excel_source.py  google_sheet_source.py
src/core/pipeline/: __init__.py  base.py  checkpoint.py  context.py
src/core/pipeline/steps/: common_steps.py
src/tasks/bank_recon/: __init__.py  pipeline_orchestrator.py
src/tasks/bank_recon/models/: __init__.py  bank_data_container.py
src/utils/: __init__.py
src/utils/config/: config_manager.py
src/utils/database/: duckdb_manager.py
src/utils/duckdb_manager/: README.md  __init__.py  config.py  exceptions.py  manager.py
src/utils/helpers/: __init__.py  file_utils.py
src/utils/logging/: __init__.py
src/utils/metadata_builder/: README.md  __init__.py  builder.py  config.py  exceptions.py  reader.py
tests/: test_iteration2_summary.md  test_iteration3_summary.md  verify_iteration1.py  verify_iteration2.py  verify_iteration3.py
tests/core/: __init__.py
tests/core/datasources/: __init__.py
tests/utils/: __init__.py
(+52 files in other folders)
