[project]
name = "spe-recon-bot"
version = "1.0.1"
description = "SPE Bot Application"
requires-python = ">=3.11"
dependencies = [
    "altgraph==0.17.4",
    "cachetools<=6.2.4",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "et_xmlfile==2.0.0",
    "google-api-core==2.25.1",
    "google-api-python-client==2.181.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.70.0",
    "httplib2==0.30.0",
    "idna==3.10",
    "numpy<=2.4.0",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.2",
    "pefile==2023.2.7",
    "proto-plus==1.26.1",
    "protobuf==6.32.0",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pyinstaller==6.15.0",
    "pyinstaller-hooks-contrib==2025.8",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32-ctypes==0.2.3",
    "requests==2.32.5",
    "rsa==4.9.1",
    "six==1.17.0",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3<=2.6.2",
    "xlsxwriter==3.2.5",
    "duckdb>=1.4.0",
    "loguru>=0.7.3",

    "colorama<=0.4.6",           # 終端機彩色輸出
    "google-auth-oauthlib<=1.2.3",  # OAuth 驗證
    "gspread<=6.2.1",            # Google Sheets API
    "oauthlib<=3.3.1",           # OAuth 核心庫
    "requests-oauthlib<=2.0.0",  # OAuth for requests
    "win32_setctime<=1.2.0",     # Windows 檔案時間設定
    "xlrd>=2.0.1",               # 讀取xls需要
    "pyyaml>=6.0.0",             # YAML配置使用
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]